--- a/Graphics/WnMain.xaml
+++ b/Graphics/WnMain.xaml
@@ -37,6 +37,11 @@
                 <Separator/>
                 <MenuItem Header="Select All" Click="SelectAll" InputGestureText="Ctrl+A"/>
             </MenuItem>
+            <MenuItem Header="Options">
+                <MenuItem Header="Update Security Seed" Click="UpdateSecuritySeed"/>
+                <Separator/>
+                <MenuItem Header="About SecurePad" Click="OpenAbout"/>
+            </MenuItem>
         </Menu>
         <avalonEdit:TextEditor x:Name="Document" ShowLineNumbers="True" FontFamily="Consolas"/>
     </DockPanel>
