--- a/Graphics/WnAbout.xaml
+++ b/Graphics/WnAbout.xaml
@@ -1,5 +1,22 @@
 ﻿<Window x:Class="SecurePad.Graphics.WnAbout"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="About SecurePad" Height="450" Width="800">
+        Title="About SecurePad" Width="500" SizeToContent="Height" ResizeMode="NoResize">
+    <DockPanel>
+        <DockPanel DockPanel.Dock="Top" Height="50" Background="WhiteSmoke">
+            <Image Source="../Icon.ico" Margin="10,10,10,10" Width="30"/>
+            <Button Content="OK" Width="50" Margin="10,10,10,10" DockPanel.Dock="Right" Click="Exit"/>
+            <Label Content="SecurePad" VerticalContentAlignment="Center" Margin="0,10,0,10" FontSize="16"/>
+        </DockPanel>
+        <StackPanel>
+            <DockPanel Margin="10,10,10,10">
+                <Label Content="Creator" VerticalContentAlignment="Center" Width="75"/>
+                <TextBox Text="Dennise (Find me on GitHub, @dentolos19)" VerticalContentAlignment="Center" IsReadOnly="True"/>
+            </DockPanel>
+            <DockPanel Margin="10,0,10,10">
+                <Label Content="Version" VerticalContentAlignment="Center" Width="75"/>
+                <TextBox Text="1.0.0 (Released on 4/10/2020)" VerticalContentAlignment="Center" IsReadOnly="True"/>
+            </DockPanel>
+        </StackPanel>
+    </DockPanel>
 </Window>
