--- a/Graphics/WnMain.xaml
+++ b/Graphics/WnMain.xaml
@@ -2,7 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:avalonEdit="http://icsharpcode.net/sharpdevelop/avalonedit"
-        Title="SecurePad">
+        Title="SecurePad" Closing="CheckUnsaved">
     <Window.CommandBindings>
         <CommandBinding Command="New" Executed="New"/>
         <CommandBinding Command="Open" Executed="Open"/>
