Added Tons of Accents from MahApps.Metro

--- a/Graphics/WnMain.xaml
+++ b/Graphics/WnMain.xaml
@@ -41,8 +41,30 @@
             <MenuItem Header="Options">
                 <MenuItem Header="Change App Theme">
                     <MenuItem x:Name="MenuThemeSwitchItem" Header="Switch To " Click="SwitchThemeMode"/>
-                    <ComboBox x:Name="MenuAccentComboBox">
+                    <ComboBox x:Name="MenuAccentComboBox" DropDownClosed="SwitchAccentStyle">
+                        <ComboBoxItem Content="Red"/>
+                        <ComboBoxItem Content="Green"/>
+                        <ComboBoxItem Content="Blue"/>
+                        <ComboBoxItem Content="Purple"/>
+                        <ComboBoxItem Content="Orange"/>
+                        <ComboBoxItem Content="Lime"/>
+                        <ComboBoxItem Content="Emerald"/>
+                        <ComboBoxItem Content="Teal"/>
+                        <ComboBoxItem Content="Cyan"/>
                         <ComboBoxItem Content="Cobalt"/>
+                        <ComboBoxItem Content="Indigo"/>
+                        <ComboBoxItem Content="Violet"/>
+                        <ComboBoxItem Content="Pink"/>
+                        <ComboBoxItem Content="Magenta"/>
+                        <ComboBoxItem Content="Crimson"/>
+                        <ComboBoxItem Content="Amber"/>
+                        <ComboBoxItem Content="Yellow"/>
+                        <ComboBoxItem Content="Brown"/>
+                        <ComboBoxItem Content="Olive"/>
+                        <ComboBoxItem Content="Steel"/>
+                        <ComboBoxItem Content="Mauve"/>
+                        <ComboBoxItem Content="Taupe"/>
+                        <ComboBoxItem Content="Sienna"/>
                     </ComboBox>
                 </MenuItem>
                 <MenuItem Header="Check For Updates" Click="CheckForUpdates"/>
