--- a/App.xaml
+++ b/App.xaml
@@ -1,7 +1,7 @@
 ﻿<Application x:Class="SecurePad.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             Startup="Initialize">
+             Startup="Initialize" DispatcherUnhandledException="HandleExceptions">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
