--- a/Graphics/WnAbout.xaml
+++ b/Graphics/WnAbout.xaml
@@ -5,7 +5,7 @@
                      Title="About SecurePad" Width="500" SizeToContent="Height" ResizeMode="NoResize" TitleCharacterCasing="Normal">
     <DockPanel>
         <DockPanel x:Name="TopPanel" DockPanel.Dock="Top" Height="50" Background="WhiteSmoke">
-            <Image Source="/Icon.ico" Margin="10,10,10,10" Width="30"/>
+            <Image Source="/Resources/Icon.ico" Margin="10,10,10,10" Width="30"/>
             <Button Content="OK" Width="50" Margin="10,10,10,10" DockPanel.Dock="Right" Click="Exit"/>
             <Label Content="SecurePad" VerticalContentAlignment="Center" Margin="0,10,0,10" FontSize="16"/>
         </DockPanel>
@@ -16,7 +16,7 @@
             </DockPanel>
             <DockPanel Margin="10,0,10,10">
                 <Label Content="Version" VerticalContentAlignment="Center" Width="75"/>
-                <TextBox Text="1.1.2 (Released on 4/14/2020)" VerticalContentAlignment="Center" IsReadOnly="True"/>
+                <TextBox Text="1.1.3 (Released on 4/16/2020)" VerticalContentAlignment="Center" IsReadOnly="True"/>
             </DockPanel>
         </StackPanel>
     </DockPanel>
