--- a/SecurePad/Graphics/WnMain.xaml
+++ b/SecurePad/Graphics/WnMain.xaml
@@ -3,7 +3,7 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:mahApps="http://metro.mahapps.com/winfx/xaml/controls"
         xmlns:avalonEdit="http://icsharpcode.net/sharpdevelop/avalonedit"
-        Title="SecurePad" TitleCharacterCasing="Normal" SaveWindowPosition="True" Loaded="LoadFileArgs" Closing="CheckUnsaved">
+        Title="SecurePad" TitleCharacterCasing="Normal" SaveWindowPosition="True" ResizeMode="CanResizeWithGrip" Loaded="LoadFileArgs" Closing="CheckUnsaved">
     <Window.CommandBindings>
         <CommandBinding Command="New" Executed="NewFile"/>
         <CommandBinding Command="Open" Executed="OpenFile"/>
